tests/golden/type_errors/generic_struct_bound.cd
struct NumberBox<T: number> { value: T }

let value = NumberBox { value: "text" };
