tests/golden/type_errors/generic_struct_bound.err
Type error at 3:13: struct NumberBox: type parameter T must satisfy number, got string
  let value = NumberBox { value: "text" };
              ^
